test/langtools/tools/javac/lambda/8131742/T8131742.out
T8131742.java:8:31: compiler.err.expected: ')'
T8131742.java:8:39: compiler.err.this.as.identifier
T8131742.java:8:43: compiler.err.expected: token.identifier
3 errors
